gl33-master/src/test/deca/context/invalid/other/ifthenelse_fausse.deca
// Invalid
// ifthenelse fausse

{
    int n = 2;
    float x= 2.5;
    string s = "true";

    if(n){
        println("non");
    }

    if(x){
        println("non");
    }

    if(s){
        println("non");
    }

    
}
